Se agrega direccion de descarga

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="#news" class="nav-link text-slate-600 hover:text-sky-500 font-bold">Novedades</a>
                     <a href="#" id="privacy-link" class="nav-link text-slate-600 hover:text-sky-500 font-bold">Política de Privacidad</a>
                 </nav>
-                <a href="#download" class="hidden md:block bg-sky-500 text-white font-bold px-5 py-2 rounded-full hover:bg-sky-600 transition-colors">Descargar</a>
+                <a href="https://play.google.com/apps/internaltest/4700965461302072592" class="hidden md:block bg-sky-500 text-white font-bold px-5 py-2 rounded-full hover:bg-sky-600 transition-colors">Descargar</a>
                 <button id="mobile-menu-button" class="md:hidden text-slate-800">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                 </button>
@@ -95,7 +95,7 @@
                 <a href="#about" class="block py-2 px-6 text-slate-600 hover:bg-slate-100">Nosotros</a>
                 <a href="#news" class="block py-2 px-6 text-slate-600 hover:bg-slate-100">Novedades</a>
                 <a href="#" id="privacy-link-mobile" class="block py-2 px-6 text-slate-600 hover:bg-slate-100">Política de Privacidad</a>
-                <div class="p-4"><a href="#download" class="w-full text-center block bg-sky-500 text-white font-bold px-5 py-3 rounded-full hover:bg-sky-600 transition-colors">Descargar</a></div>
+                <div class="p-4"><a href="https://play.google.com/apps/internaltest/4700965461302072592" class="w-full text-center block bg-sky-500 text-white font-bold px-5 py-3 rounded-full hover:bg-sky-600 transition-colors">Descargar</a></div>
             </div>
         </header>
 
@@ -104,7 +104,7 @@
                 <div class="container mx-auto px-6 text-center">
                     <h1 class="text-4xl md:text-6xl font-extrabold text-slate-900 leading-tight">La Herramienta de Cuadrícula Definitiva para Artistas</h1>
                     <p class="mt-6 text-lg md:text-xl max-w-3xl mx-auto text-slate-600">Transforma cualquier imagen en un lienzo preciso. Acelera tu proceso de dibujo y logra proporciones perfectas con GridSketch.</p>
-                    <a href="#download" class="mt-8 inline-block gradient-bg text-white font-bold px-8 py-4 rounded-full text-lg hover:shadow-xl transition-shadow ">Descargar Ahora</a>
+                    <a href="https://play.google.com/apps/internaltest/4700965461302072592" class="mt-8 inline-block gradient-bg text-white font-bold px-8 py-4 rounded-full text-lg hover:shadow-xl transition-shadow ">Descargar Ahora</a>
                     <div class="mt-12 mx-auto w-full max-w-4xl h-64 md:h-96 bg-slate-200 rounded-2xl flex items-center justify-center">
                          <img src="./imagen_gridsketch.png">
                     </div>
